k8s-manifests/60-result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: vote
spec:
  replicas: 2
  selector:
    matchLabels: {app: result}
  template:
    metadata:
      labels: {app: result}
    spec:
      containers:
        - name: result
          image: iti/result:v1
          imagePullPolicy: IfNotPresent
          ports: [{containerPort: 80}]
          resources:
            requests: {cpu: 100m, memory: 64Mi}
            limits:   {cpu: 500m, memory: 256Mi}
          readinessProbe:
            httpGet: {path: /, port: 80}
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: vote
spec:
  selector: {app: result}
  ports:
    - {port: 80, targetPort: 80}
